增加样式导入及store安装选项

--- a/template/src/components/Hello/config.json
+++ b/template/src/components/Hello/config.json
@@ -6,6 +6,8 @@
     "type": "hmi",
     "mode": "form-ui",
     "terminal": "desktop",
+    "version": "0.1.0",
+    "author": "zhangsan",
     "config": {
       "_comp_addr": "<%= options.cname %>",
       "_comp_tag": "<%= options.cname %>",
